--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Website</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    #postFormOverlay {
+        z-index: 50;
+    }
+    #postsContainer {
+        z-index: 10;
+    }
+    .postElement {
+      height: 200px; /* Fixed height for posts */
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
 </head>
 <body class="bg-gray-100">
   <div class="container mx-auto p-4">
@@ -15,20 +29,21 @@
       <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600">Create New Post</button>
     </div>
 
-    <!-- Hidden Create Post Form -->
-    <div id="postFormContainer" class="hidden bg-white p-6 rounded-lg shadow-md mb-8">
-      <h2 class="text-2xl font-bold mb-4">Create a New Post</h2>
-      <form id="postForm">
-        <input type="hidden" id="postId">
-        <input type="text" id="title" placeholder="Title" class="w-full p-2 border rounded mb-4">
-        <textarea id="content" placeholder="Content" class="w-full p-2 border rounded mb-4"></textarea>
-        <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Save Post</button>
-        <button id="cancelForm" type="button" class="bg-gray-500 text-white px-4 py-2 rounded ml-2 hover:bg-gray-600">Cancel</button>
-      </form>
+    <!-- Overlay and Create Post Form -->
+    <div id="postFormOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-75 hidden flex items-center justify-center">
+      <div id="postFormContainer" class="bg-white p-6 rounded-lg shadow-md">
+        <h2 class="text-2xl font-bold mb-4">Create a New Post</h2>
+        <form id="postForm">
+          <input type="hidden" id="postId">
+          <input type="text" id="title" placeholder="Title" class="w-full p-2 border rounded mb-4">
+          <textarea id="content" placeholder="Content" class="w-full p-2 border rounded mb-4"></textarea>
+          <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Save Post</button>
+          <button id="cancelForm" type="button" class="bg-gray-500 text-white px-4 py-2 rounded ml-2 hover:bg-gray-600">Cancel</button>
+        </form>
+      </div>
     </div>
 
-    <div id="postsContainer" class="space-y-4">
-      
+    <div id="postsContainer" class="space-y-4 ">
     </div>
   </div>
 
