--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         z-index: 10;
     }
     .postElement {
-      height: 200px; /* Fixed height for posts */
+      height: 200px; 
       overflow: hidden;
       display: flex;
       flex-direction: column;
@@ -24,12 +24,12 @@
   <div class="container mx-auto p-4">
     <h1 class="text-4xl font-bold text-center mb-8">My Blog</h1>
 
-    <!-- Button to open the create post form -->
+
     <div class="text-center mb-4">
       <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600">Create New Post</button>
     </div>
 
-    <!-- Overlay and Create Post Form -->
+
     <div id="postFormOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-75 hidden flex items-center justify-center">
       <div id="postFormContainer" class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-2xl font-bold mb-4">Create a New Post</h2>
