--- a/index.html
+++ b/index.html
@@ -17,19 +17,26 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .postElement:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+      z-index: 20;
     }
   </style>
 </head>
 <body class="bg-gray-100">
-  <div class="container mx-auto p-4">
-    <h1 class="text-4xl font-bold text-center mb-8">My Blog</h1>
-
-
-    <div class="text-center mb-4">
-      <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600">Create New Post</button>
+  <nav class="bg-blue-300 shadow-md mb-8 w-full h-20 flex items-center">
+    <div class="container mx-auto p-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold">My Blog</h1>
+      <div class="flex space-x-4 items-center">
+        <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600">Create New Post</button>
+      </div>
     </div>
+  </nav>
 
-
+  <div class="container mx-auto p-4">
     <div id="postFormOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-75 hidden flex items-center justify-center">
       <div id="postFormContainer" class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-2xl font-bold mb-4">Create a New Post</h2>
@@ -43,7 +50,7 @@
       </div>
     </div>
 
-    <div id="postsContainer" class="space-y-4 ">
+    <div id="postsContainer" class="space-y-4">
     </div>
   </div>
 
