--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         z-index: 10;
     }
     .postElement {
-      height: 200px; 
+      /* height: 200px;  */
       overflow: hidden;
       display: flex;
       flex-direction: column;
@@ -27,11 +27,16 @@
   </style>
 </head>
 <body class="bg-gray-100">
-  <nav class="bg-blue-300 shadow-md mb-8 w-full h-20 flex items-center">
+  <nav class="bg-green-200 shadow-md mb-8 w-full h-20 flex items-center">
+    
     <div class="container mx-auto p-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">My Blog</h1>
+      <h1 class="text-2xl font-bold">εℓѵεɳ ร૮૨เρƭร</h1>
+      <div id="searchbar">
+        
+      </div>
       <div class="flex space-x-4 items-center">
-        <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600">Create New Post</button>
+        <input id="searchPost" type="text" placeholder="🔍search" class="w-80 rounded-full h-10 postElement hover:bg-gray-100 click:bg-white text-xl p-5">
+        <button id="openForm" class="bg-blue-500 text-white text-bold px-4 py-2 rounded hover:bg-blue-600 postElement">Add Post🍀</button>
       </div>
     </div>
   </nav>
@@ -54,6 +59,7 @@
     </div>
   </div>
 
+  
   <script src="script.js"></script>
 </body>
 </html>
