--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body class="bg-gray-100">
-  <nav class="bg-green-200 shadow-md mb-8 w-full h-20 flex items-center">
+  <nav class="bg-violet-200 shadow-md mb-8 w-full h-20 flex items-center">
     
     <div class="container mx-auto p-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold">εℓѵεɳ ร૮૨เρƭร</h1>
@@ -41,7 +41,7 @@
     </div>
   </nav>
 
-  <div class="container mx-auto p-4">
+  <div class="container mx-auto p-8">
     <div id="postFormOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-75 hidden flex items-center justify-center">
       <div id="postFormContainer" class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-2xl font-bold mb-4">Create a New Post</h2>
